internal/xds/translator/testdata/out/xds-ir/oidc.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            - email
            - profile
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            codeVerifierTokenExpiresIn: 120s
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /foo/oauth2/callback
              oauthNonceCookieConfig:
                path: /foo/oauth2/callback
            credentials:
              clientId: client.oauth.foo.com
              cookieNames:
                bearerToken: AccessToken-5F93C2E4
                codeVerifier: CodeVerifier-5F93C2E4
                idToken: IdToken-5F93C2E4
                oauthExpires: OauthExpires-5F93C2E4
                oauthHmac: OauthHMAC-5F93C2E4
                oauthNonce: OauthNonce-5F93C2E4
                refreshToken: RefreshToken-5F93C2E4
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-first-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-first-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            csrfTokenExpiresIn: 2100s
            defaultExpiresIn: 3600s
            defaultRefreshTokenExpiresIn: 172800s
            endSessionEndpoint: https://oauth.foo.com/logout
            forwardBearerToken: true
            forwardIdToken:
              header: X-ID-Token
            postLogoutRedirectUri:
              uri: '%REQ(x-forwarded-proto)%://%REQ(:authority)%/foo/loggedout'
            redirectPathMatcher:
              path:
                exact: /foo/oauth2/callback
            redirectUri: https://www.example.com/foo/oauth2/callback
            resources:
            - api
            signoutPath:
              path:
                exact: /foo/logout
            statPrefix: securitypolicy/default/policy-for-first-route
            tokenEndpoint:
              cluster: oauth_foo_com_443
              timeout: 10s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
    - match:
        path: bar
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            - email
            - profile
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.bar.com/oauth2/v2/auth
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /bar/oauth2/callback
              oauthNonceCookieConfig:
                path: /bar/oauth2/callback
            credentials:
              clientId: client.oauth.bar.com
              cookieDomain: example.com
              cookieNames:
                bearerToken: CustomAccessTokenOverride
                codeVerifier: CustomCodeVerifierOverride
                idToken: CustomIdTokenOverride
                oauthExpires: CustomOauthExpiresOverride
                oauthHmac: CustomOauthHMACOverride
                oauthNonce: CustomOauthNonceOverride
                refreshToken: CustomRefreshTokenOverride
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-second-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-second-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            denyRedirectMatcher:
            - name: test-exact
              stringMatch:
                exact: /api
            - name: test-regex
              stringMatch:
                safeRegex:
                  regex: .*
            - name: test-suffix
              stringMatch:
                suffix: bar
            - name: test-prefix
              stringMatch:
                prefix: foo
            - name: test-no-type
              stringMatch:
                exact: foobar
            disableTokenEncryption: true
            endSessionEndpoint: https://oauth.bar.com/logout
            forwardIdToken:
              header: Authorization
            postLogoutRedirectUri:
              disabled: true
            redirectPathMatcher:
              path:
                exact: /bar/oauth2/callback
            redirectUri: https://www.example.com/bar/oauth2/callback
            resources:
            - api
            signoutPath:
              path:
                exact: /bar/logout
            statPrefix: securitypolicy/default/policy-for-second-route
            tokenEndpoint:
              cluster: oauth_bar_com_443
              timeout: 10s
              uri: https://oauth.bar.com/token
            useRefreshToken: false
